@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction
Package Controller <<Folder>>{
    class PostponeAgendaEntryController {
        + getEntriesFromAgendaStartingFrom(currentDate, status)
        + getAvailableVehiclesWithinTime(selectedEntry)
    }
}
Package UI <<Folder>>{
    class PostponeAgendaEntryUI {
        +run()
    }
}


Package RepositoriesPkg <<Folder>>{
    class Repositories{
        - instance : Repositories
        - Repository : SkillRepository
        - agendaRepository : AgendaRepository
        - employeeRepository : EmployeeRepository

        + getInstance() : Repositories
        + getAgendaRepository()
        + getEmployeeRepository()
    }

    class AgendaRepository{
        + getEntriesFromAgendaStartingFrom(currentDate, status)
        + getEntriesFromAgendaPriorTo(currentDate, status)

    }

    class EmployeeRepository {

        + getEmployees()
        + validateEmployee(newEmployee)
        + addEmployees(newEmployee)
    }

    class VehicleRepository{
        + getVehicles()
        + validateVehicle(newVehicle)
        + addVehicle(newVehicle)
    }

    class AuthenticationRepository{
        + getEmployeeFromSession()
    }
}

Package Domain <<Folder>>{
    class Entry {
        - String name
        - String description
        - String urgencyDegree
        - int duration
        - GreenSpace greenSpace
        - String status
        - LocalDate entryDate
        - int hour
        + Entry(String name, String description, String urgencyDegree,\n int duration, GreenSpace greenSpace, LocalDate date, int hour)
    }

    class Vehicle {
    - String brand
        - String model
        - String type
        - Integer tareWeight
        - Integer grossWeight
        - Integer currenteKm
        - Date registerDate
        - Date acquisitionDate
        - Integer maintenanceFrequency
        - String plateNumber
        - Integer passengersNumber
        - Integer doorsNumber
        - String fuelType
        - Boolean trailerMachines

        + Vehicle(brand, model, type, tare weight,\n gross weight, current km,register date, \nacquisition date, maintenance frequency, \nplate number, passengers number,\ndoors number, fuel type, trailer machines)
    }

    class Employee {
        -name:String
        -birthdate:Date
        -admissionDate:Date
        -address
        -mobileContact:String
        -emailContact:String
        -IDdocType:String
        -IDnumber:String
        -taxNumber:String
        -job:Job

        +Employee (String nome,LocalDate dateOfBirth,\nLocalDate admissionDate, String morada, int telemovel,\nString email, String idDocType, int docTypeNumber,\nint taxPayerIdNumber, String role, Job job)
    }
}

PostponeAgendaEntryUI "1" ..> "1" PostponeAgendaEntryController




Repositories -> Repositories : instance
Repositories "1" .> "1" AgendaRepository
Repositories "1" .> "1" VehicleRepository
Repositories "1" .> "1" AuthenticationRepository
Repositories "1" -> "1" EmployeeRepository

EmployeeRepository "1" -> "*" Employee
AgendaRepository"1" --> "*"Entry
VehicleRepository"1" --> "*"Vehicle


PostponeAgendaEntryController -> AgendaRepository
PostponeAgendaEntryController -> VehicleRepository
PostponeAgendaEntryController "1" ..> "1" Repositories : repositories
PostponeAgendaEntryController "1" -> "1" AuthenticationRepository : getCurrentUserSession

PostponeAgendaEntryController -> Employee

AuthenticationRepository --> Employee

Employee -> Entry
Employee -> Vehicle

@enduml